--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "iota-array": "~1.0.0",
     "leveldown": "~1.4.4",
     "levelup": "~1.3.1",
     "memdown": "~1.1.2",
-    "tape": "~4.4.0",
-    "test-level": "0.0.2"
+    "tape": "~4.5.1",
+    "test-level": "0.0.3"
   },
   "keywords": [
     "decode",
